# trename

./: .gitignore  main.py  pyproject.toml
src/trename/: __init__.py  __main__.py  app.py  cli.py  clipboard.py  models.py  renamer.py  scanner.py  undo.py  validator.py
src/trename.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
